Fix z-index values for video and header

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
   position: sticky;
   top: 0;
   background-color: #2a2d34;
-  text-align: center; }
+  text-align: center;
+  z-index: 5; }
 
 #logo-container {
   width: 100%; }
@@ -31,14 +32,14 @@
     margin-top: 18vh; }
 
 #video-section {
-  border-bottom: 1px solid #706e99;
-  grid-area: video; }
+  grid-area: video;
+  background-color: #e3e3e3; }
 
 .video-embed {
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
-  z-index: -1; }
+  z-index: 0; }
 
 .video-embed iframe {
   position: absolute;
