--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,6 +4,7 @@
   top: 0;
   background-color: $dark-gray;
   text-align: center;
+  z-index: 5;
 }
 
 #logo-container {
