--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -1,13 +1,13 @@
 #video-section {
-  border-bottom: 1px solid #706e99;
   grid-area: video;
+  background-color: $light-gray;
 }
 
 .video-embed {
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
-  z-index: -1;
+  z-index: 0;
 }
 
 .video-embed iframe {
